style:fixed alignment of profile on header and added buttons instead of links

--- a/client/src/components/HeaderProfile/ExpandedHeaderProfile/ExpandedHeaderProfile.css
+++ b/client/src/components/HeaderProfile/ExpandedHeaderProfile/ExpandedHeaderProfile.css
@@ -1,3 +1,10 @@
+.expanded-header-parent {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  translate: 100px -50px;
+}
+
 .expanded-header-profile-container {
   position: absolute;
   z-index: 100;
@@ -14,6 +21,17 @@
   background-color: var(--bg-main);
 }
 
+.expanded-header-text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .expanded-header-profile-link {
   color: #bbcccd;
+  padding: 0.5rem;
+  text-align: center;
+  border: #bbcccd solid 1px;
+  text-decoration: none;
+  border-radius: 0.5rem;
 }
